--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,39 +1,9 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 60px;
-}
-
-.footer {
-    display: flex;
-    justify-content:space-between;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-  }
-
 .social-icon {
     margin-left: 15px;
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
 }
 
-.left-content,
-.right-content {
-  display: flex;
-  align-items:center;
-  font-size: small;
-  margin-right:20px;
-}
-
-.left-content > img {
-  width: 100px;
-  margin: 0;
+.navFooter{
+    font-size: small;
 }
