--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,16 +1,47 @@
 .card-text{
-  font-size: 0.8rem;
+  font-size: 0.75rem;
 }
 
 .card-title{
   background: rgba(255,255,255,0.4);
 }
 
-.favorite {
+/* .favorite {
   color: #ffdede;
   cursor: pointer;
 }
-
+ */
 .emailDecoration{
   text-decoration: none;
+}
+
+.heart {
+  width: 100px;
+  height: 100px;
+  background: url("/src/assets/heart.png") no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+  transition: background-position 1s steps(28);
+  transition-duration: 0s;
+  
+  &.is-active {
+    transition-duration: 1s;
+    background-position: -2800px 0;
+  }
+}
+
+.stage{
+  margin-top: -25px;
+  margin-left: -25px;
+}
+
+.fullNameStyle{
+  margin-top: 10px;
+  margin-right: 12px;
+
+}
+
+.fullName{
+  font-size: 0.9rem;
+
 }
