--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,15 +2,6 @@
   font-size: 0.75rem;
 }
 
-.card-title{
-  background: rgba(255,255,255,0.4);
-}
-
-/* .favorite {
-  color: #ffdede;
-  cursor: pointer;
-}
- */
 .emailDecoration{
   text-decoration: none;
 }
@@ -44,4 +35,20 @@
 .fullName{
   font-size: 0.9rem;
 
+}
+
+.text-shadow-dark {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+}
+
+.text-shadow-light {
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 1);
+}
+
+.low-brightness {
+  filter: brightness(0.6);
+}
+
+.high-brightness {
+  filter: brightness(0.8);
 }
