--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 a {
-    text-decoration: none;
-  }
+  text-decoration: none;
+}
+
+.item-separator {
+  width: 10px;
+  height: 100%;
+  display: inline-block;
+}
+
+.invert-color {
+  filter: invert(1);
+}
