ThemeSwitch, LanguageSelector, Card, Contact, NoPage, modificaciones varias

--- a/src/components/languageSelector/languageSelector.css
+++ b/src/components/languageSelector/languageSelector.css
@@ -1,6 +1,10 @@
 .icon-flags {
-    width: 18px; /* ajusta el tamaño según tus necesidades */
-    height: 18px; /* ajusta el tamaño según tus necesidades */
-    margin-right: 8px; /* ajusta el margen derecho según tus necesidades */
-    /* Otros estilos que desees agregar */
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
   }
+  
+.icon-globe {
+  width: 20px;
+  height: 20px;
+}
